fix: allow long links to wrap to the next line

--- a/src/components/common/RichText/styles.module.css
+++ b/src/components/common/RichText/styles.module.css
@@ -1,3 +1,7 @@
+.hyperlink {
+  word-wrap: break-word;
+}
+
 .imageContainer {
   display: flex;
   flex-direction: column;
